package main.java.com.proyect;

public interface Command {
    void execute();
}

